@@ -16,6 +16,9 @@ cryptsetup (2:1.7.3-3~mejo1) mejo-unstable; urgency=medium
   * debian/README.initramfs: minor fix to the decrypt_derived keyscript
     section: now that systemd is standard, 'cryptdisks_start' should be used
     instead of '/etc/init.d/cryptdisks start'.
+  * debian/manpages/crypttab.xml: add a warning to the 'keyscript' option
+    that systemd doesn't support the option (yet) and mention the possible
+    workaround to process the devices in question in the initramfs.
 
   [ Guilhem Moulin ]
   * add debian/gbp.conf to set the upstream tag to "v%(version%.%_)s".  As
@@ -23,7 +26,7 @@ cryptsetup (2:1.7.3-3~mejo1) mejo-unstable; urgency=medium
     orig.tar.gz, step nr. 5 is now removed from debian/README.source.
   * debian/compat: bump debhelper compatibility version to 9.
 
- -- Jonas Meurer <mejo@debian.org>  Tue, 06 Dec 2016 22:42:12 +0100
+ -- Jonas Meurer <mejo@debian.org>  Tue, 06 Dec 2016 22:55:20 +0100
 
 cryptsetup (2:1.7.3-2) unstable; urgency=medium
 
